[package]
name = "bevy_winit_hook"
version = "0.12.1"
edition = "2021"
description = "bevy_winit with an exposed window builder hook"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
wayland = ["winit/wayland", "winit/wayland-csd-adwaita"]
x11 = ["winit/x11"]
accesskit_unix = ["accesskit_winit/accesskit_unix", "accesskit_winit/async-io"]

[dependencies]
# bevy
bevy_a11y = { version = "0.12.1" }
bevy_app = { version = "0.12.1" }
bevy_derive = { version = "0.12.1" }
bevy_ecs = { version = "0.12.1" }
bevy_hierarchy = { version = "0.12.1" }
bevy_input = { version = "0.12.1" }
bevy_math = { version = "0.12.1" }
bevy_window = { version = "0.12.1" }
bevy_utils = { version = "0.12.1" }
bevy_tasks = { version = "0.12.1" }

# other
winit = { version = "0.28.7", default-features = false }
accesskit_winit = { version = "0.15", default-features = false }
approx = { version = "0.5", default-features = false }
raw-window-handle = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.28.7", default-features = false, features = [
    "android-native-activity",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = "0.3"
crossbeam-channel = "0.5"

[package.metadata.docs.rs]
features = ["x11"]
